# Explorer

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  secret-example.toml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/lagoon/markets/explorer/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/lagoon/markets/explorer/: AppNavigation.kt  GradientButton.kt  InitApp.kt  MainActivity.kt  Siws.kt  TextComponents.kt  discovery.kt  onboarding.kt  rustFFI.kt  utils.kt
Android/app/src/main/java/lagoon/markets/explorer/auth/: Siws.kt
Android/app/src/main/java/lagoon/markets/explorer/dashboard/: Dashboard.kt  Resources.kt
Android/app/src/main/java/lagoon/markets/explorer/notifications/: LiveUpdates.kt  Notiifications.kt
Android/app/src/main/java/lagoon/markets/explorer/ui/theme/: Color.kt  Theme.kt  Type.kt  backgrounds.kt  fonts.kt
Android/app/src/main/java/lagoon/markets/explorer/x402_handlers/: discovery.kt
Android/app/src/main/res/drawable/: a2a.xml  baby_birds_singing_in_a_nest.xml  discover.xml  ic_launcher_foreground.xml  inbox.xml  initial.xml  lagoon_markets_logo.xml  mcp.xml  onboarding_1_image.xml  onboarding_2_image.xml  onboarding_3_image.xml  profile_avatar_purple_mountain_majesty.xml  qrcode_purple_mountain_magesty.xml  splashscreen_icon.xml  subscribe.xml  wallet_error.xml  web.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/test/java/lagoon/markets/explorer/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: chain.rs  headers.rs  lib.rs  live_updates.rs  rpc_response.rs  status_400_response.rs  tx_base64_json.rs  utils.rs  x402_uri.rs
docs/: X402-URI.md
native/: Cargo.toml  Makefile.toml  uniffi.toml
native/src/: errors.rs  lib.rs  types.rs  utils.rs
native/src/api/: construct_tx.rs  discovery.rs  init.rs  live_updates.rs  mod.rs  optimize_tx.rs  siws.rs  user_profile.rs  utils.rs  x402.rs
native/src/storage/: auth.rs  kv.rs  mod.rs  profile.rs  x402.rs
server/: Cargo.toml  Rocket.toml
server/src/: allowed_assets.rs  config.rs  deeplinks_handler.rs  fetch_mint_info.rs  index_handler.rs  main.rs  newsletter.rs  x402_response_handler.rs
server/src/x402/: discover.rs  mod.rs  optimize_tx_handler.rs
server/static/: index.html  input.css  template.html
server/static/assets/: tailwind.css
x402-uri/: Cargo.toml  SPECSHEET.md
x402-uri/src/: lib.rs
