[workspace]
members = ["client", "common", "native", "server", "x402-uri"]

resolver = "3"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[workspace.dependencies]
rusty-x402 = { git = "https://github.com/JamiiDao/x402.git", rev = "cdef0c5" }
common = { path = "./common" }

jzon = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
bincode = "1"
bs58 = "0.5.1"
solana-instruction = "2"
solana-keypair = "=2"
solana-pubkey = "=2"
solana-sdk-ids = "=2"
solana-signer = "=2"
solana-system-interface = { version = "=1", features = ["bincode"] }
solana-transaction = "=2"
spl-associated-token-account = "7"
spl-token = "8.0.0"
spl-token-2022 = { version = "9.0.0" }
base64ct = { version = "1.8.0", features = ["std"] }
solana-message = { version = "2", features = ["bincode"] }
solana-hash = "2"
wallet-standard-base = "0.1.7"
toml = "0.9.8"
