[workspace]
members = ["client", "common", "native", "server", "x402-uri"]

resolver = "3"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[workspace.dependencies]
rusty-x402 = { git = "https://github.com/JamiiDao/x402.git", rev = "424b21c" }
common = { path = "./common" }
x402-uri = { path = "./x402-uri" }

jzon = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
bincode = "1"
bs58 = "0.5.1"
solana-instruction = "2"
solana-keypair = "=2"
solana-pubkey = "=2"
solana-sdk-ids = "=2"
solana-signer = "=2"
solana-system-interface = { version = "=1", features = ["bincode"] }
solana-transaction = { version = "=2", features = ["bincode"] }
spl-token = "8.0.0"
spl-token-2022 = { version = "9.0.0" }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
base64ct = { version = "1.8.0", features = ["std"] }
solana-message = { version = "2", features = ["bincode"] }
solana-hash = "2"
wallet-standard-base = "0.1.7"
toml = "0.9.8"
camino = "1.2.1"
async-fs = "2.2.0"
futures-lite = "2.6.1"
blocking = "1.6.2"
once_cell = "1.21.3"
wincode = { version = "0.1.2", features = ["derive"] }
async-io = "2.6.0"
minreq = { version = "2.14.1", features = ["https"] }
smol = "2.0.2"
# solana-hash = { version = "3.0.0", features = ["serde"] }
# solana-keypair = "3.0.1"
# solana-message = { version = "3.0.1", features = ["bincode"] }
# solana-pubkey = { version = "3.0.0", features = ["dev-context-only-utils"] }
# solana-signer = "3.0.0"
# solana-system-interface = { version = "2.0.0", features = ["bincode"] }
# solana-transaction = { version = "3.0.1", features = ["bincode"] }
