[package]
name = "client"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rusty-x402.workspace = true
common.workspace = true
bincode.workspace = true
bs58.workspace = true
minreq = { version = "2.14.1", features = ["https"] }
serde_json.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction = { workspace = true, features = ["bincode"] }
spl-associated-token-account.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
jzon.workspace = true
serde.workspace = true
base64ct.workspace = true
solana-message.workspace = true
solana-hash.workspace = true
