[package]
name = "common"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
base64ct.workspace = true
jzon.workspace = true
wincode.workspace = true
minreq = { workspace = true, features = ["https"] }
percent-encoding = "2.3.2"
