[package]
name = "explorer-native"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "explorer_native"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
