[package]
name = "explorer-native"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "explorer_native"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
common.workspace = true
wincode.workspace = true
minreq.workspace = true
base64ct.workspace = true
jzon.workspace = true
uniffi = { version = "0.29.4", features = ["cli"] }
redb = "=3.1.0"
camino.workspace = true
thiserror.workspace = true
async-fs.workspace = true
futures-lite.workspace = true
blocking.workspace = true
once_cell.workspace = true
bs58.workspace = true
serde = { workspace = true, features = ["derive"] }
async-io.workspace = true
x402-uri.workspace = true
serde_json.workspace = true
rusty-x402.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction.workspace = true
solana-instruction.workspace = true
bincode.workspace = true
spl-associated-token-account.workspace = true
spl-token-2022.workspace = true
android_log-sys = "0.3.2"
ureq = "3.1.2"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
