[package]
name = "server"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
rusty-x402.workspace = true
jzon.workspace = true
wallet-standard-base.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
once_cell = "1.21.3"
common.workspace = true
minijinja = "2.11.0"
