[package]
name = "server"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
rusty-x402.workspace = true
x402-uri.workspace = true
jzon.workspace = true
wallet-standard-base.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
once_cell = "1.21.3"
common.workspace = true
minijinja = "2.11.0"
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction.workspace = true
base64ct.workspace = true
bincode.workspace = true
minreq.workspace = true
spl-token-2022.workspace = true
blocking.workspace = true
